feat: New components for template and reactive forms - with basic UI.

--- a/src/app/components/student-tile/student-tile.html
+++ b/src/app/components/student-tile/student-tile.html
@@ -9,10 +9,6 @@
     <img src="assets/female.png" width="32" height="32" alt="female" />
     }
   </div>
-  <div class="marks">
-    {{ student.marks }}
-  </div>
-  <div class="group">
-    {{ student.group | uppercase }}
-  </div>
+  <div class="marks">Marks: {{ student.marks }}</div>
+  <div class="group">Group: {{ student.group | uppercase }}</div>
 </div>
