--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,11 +1,33 @@
-<form>
-  <div>
-    <input name="username" type="text" [(ngModel)]="username" />
+<div class="wrapper">
+  <div class="center">
+    <h2>Login</h2>
+    <form>
+      <div class="form-group">
+        <input
+          name="username"
+          placeholder="Username"
+          type="text"
+          [(ngModel)]="username"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <input
+          name="password"
+          placeholder="Password"
+          type="password"
+          [(ngModel)]="password"
+          required
+        />
+      </div>
+      <div>
+        <button
+          [disabled]="!(username.length && password.length)"
+          (click)="checkDetails()"
+        >
+          Login
+        </button>
+      </div>
+    </form>
   </div>
-  <div>
-    <input name="password" type="password" [(ngModel)]="password" />
-  </div>
-  <div>
-    <button (click)="checkDetails()">Login</button>
-  </div>
-</form>
+</div>
