--- a/src/app/components/student-details-capture-template/student-details-capture-template.html
+++ b/src/app/components/student-details-capture-template/student-details-capture-template.html
@@ -3,7 +3,12 @@
   <form>
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" class="form-control" />
+      <input
+        placeholder="Student Name"
+        type="text"
+        id="name"
+        class="form-control"
+      />
       <!-- <small>Error message</small> -->
     </div>
     <div class="form-group">
