--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 html,
 body {
   margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
 button {
@@ -19,5 +21,9 @@ button {
   cursor: pointer;
   &:hover {
     opacity: 0.9;
+  }
+  &:disabled {
+    opacity: 0.4;
+    cursor: not-allowed;
   }
 }
