--- a/src/app/components/student-details-capture-template/student-details-capture-template.html
+++ b/src/app/components/student-details-capture-template/student-details-capture-template.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h3>Add New Student</h3>
-  <form>
+  <form #studentForm="ngForm" (ngSubmit)="submitDetails(studentForm)">
     <div class="form-group">
       <label for="name">Name</label>
       <input
@@ -8,37 +8,91 @@
         type="text"
         id="name"
         class="form-control"
+        minlength="3"
+        required
+        [(ngModel)]="student.name"
+        #stname="ngModel"
+        name="name"
       />
-      <!-- <small>Error message</small> -->
+
+      @if(stname.invalid && (stname.dirty || stname.touched)){
+      @if(stname.errors?.['required']){
+      <small>Name is required.</small>
+      } @if(stname.errors?.['minlength']){
+      <small>Name should have atleast 3 characters.</small>
+      } }
     </div>
+
     <div class="form-group">
       <label>Gender</label>
       <div class="radio-group">
-        <input id="maleGender" type="radio" value="male" />
+        <input
+          id="maleGender"
+          type="radio"
+          value="male"
+          required
+          name="gender"
+          [(ngModel)]="student.gender"
+          #stgender="ngModel"
+        />
         <label for="maleGender"> Male </label>
-        <input type="radio" id="femaleGender" value="female" />
+        <input
+          type="radio"
+          id="femaleGender"
+          value="female"
+          required
+          name="gender"
+          [(ngModel)]="student.gender"
+        />
         <label for="femaleGender"> Female </label>
+
+        @if(stgender.invalid && (stgender.dirty || stgender.touched)){
+        @if(stgender.errors?.['required']){
+        <small>Gender is required.</small>
+        } }
       </div>
-      <!-- <small>Error message</small> -->
     </div>
+
     <div class="form-group">
       <label for="group">Group</label>
-      <select id="group" class="form-control">
+      <select
+        id="group"
+        class="form-control"
+        required
+        name="group"
+        [(ngModel)]="student.group"
+        #stgroup="ngModel"
+      >
         <option value="" disabled>Select a group</option>
         <option value="science">Science</option>
         <option value="commerce">Commerce</option>
       </select>
-      <!-- <small>Error message</small> -->
+
+      @if(stgroup.invalid && (stgroup.dirty || stgroup.touched)){
+      @if(stgroup.errors?.['required']){
+      <small>Group is required.</small>
+      } }
     </div>
 
     <div class="form-group">
       <label for="name">Marks</label>
-      <input type="number" id="marks" class="form-control" />
-      <!-- <small>Error message</small> -->
+      <input
+        type="number"
+        id="marks"
+        class="form-control"
+        required
+        [(ngModel)]="student.marks"
+        #stmarks="ngModel"
+        name="marks"
+      />
+      @if(stmarks.invalid && (stmarks.dirty || stmarks.touched)){
+      @if(stmarks.errors?.['required']){
+      <small>Marks is required.</small>
+      } }
     </div>
 
     <div class="button-container">
-      <button type="submit" [disabled]="false">Submit</button>
+      <button type="submit" [disabled]="studentForm.invalid">Submit</button>
     </div>
   </form>
 </div>
