--- a/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
+++ b/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
@@ -1,40 +1,71 @@
 <div class="wrapper">
   <h3>Add New Student</h3>
   <form>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input
-        placeholder="Student Name"
-        type="text"
-        id="name"
-        class="form-control"
-      />
-      <!-- <small>Error message</small> -->
-    </div>
-    <div class="form-group">
-      <label>Gender</label>
-      <div class="radio-group">
-        <input id="maleGender" type="radio" value="male" />
-        <label for="maleGender"> Male </label>
-        <input type="radio" id="femaleGender" value="female" />
-        <label for="femaleGender"> Female </label>
+    <div class="main-details">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input
+          placeholder="Student Name"
+          type="text"
+          id="name"
+          class="form-control"
+        />
+        <!-- <small>Error message</small> -->
       </div>
-      <!-- <small>Error message</small> -->
-    </div>
-    <div class="form-group">
-      <label for="group">Group</label>
-      <select id="group" class="form-control">
-        <option value="" disabled>Select a group</option>
-        <option value="science">Science</option>
-        <option value="commerce">Commerce</option>
-      </select>
-      <!-- <small>Error message</small> -->
+      <div class="form-group">
+        <label>Gender</label>
+        <div class="radio-group">
+          <input id="maleGender" type="radio" value="male" />
+          <label for="maleGender"> Male </label>
+          <input type="radio" id="femaleGender" value="female" />
+          <label for="femaleGender"> Female </label>
+        </div>
+        <!-- <small>Error message</small> -->
+      </div>
+      <div class="form-group">
+        <label for="group">Group</label>
+        <select id="group" class="form-control">
+          <option value="" disabled>Select a group</option>
+          <option value="science">Science</option>
+          <option value="commerce">Commerce</option>
+        </select>
+        <!-- <small>Error message</small> -->
+      </div>
+
+      <div class="form-group">
+        <label for="name">Marks</label>
+        <input type="number" id="marks" class="form-control" />
+        <!-- <small>Error message</small> -->
+      </div>
     </div>
 
-    <div class="form-group">
-      <label for="name">Marks</label>
-      <input type="number" id="marks" class="form-control" />
-      <!-- <small>Error message</small> -->
+    <div [hidden]="false" class="attributes-section">
+      <div class="sub-header">
+        <h4>Attributes</h4>
+        <button type="button" (click)="removeThisArray.push(1)">
+          Add attribute
+        </button>
+      </div>
+      <div class="attributes-list">
+        @for (item of removeThisArray; track $index) {
+        <div class="form-group attribute-group">
+          <input
+            [id]="`studentAttribute${$index + 1}`"
+            type="text"
+            placeholder="Add an attribute"
+          />
+          <img
+            class="close"
+            src="assets/trash.png"
+            width="18"
+            height="18"
+            alt="delete button"
+            (click)="removeThisArray.pop()"
+          />
+          <!-- <small>Error message</small> -->
+        </div>
+        }
+      </div>
     </div>
 
     <div class="button-container">
