chore: Hide values before implementation.

--- a/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
+++ b/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div [hidden]="false" class="attributes-section">
+    <div [hidden]="true" class="attributes-section">
       <div class="sub-header">
         <h4>Attributes</h4>
         <button type="button" (click)="removeThisArray.push(1)">
