feat: Basic form validations done

--- a/src/app/components/student-tile/student-tile.html
+++ b/src/app/components/student-tile/student-tile.html
@@ -11,7 +11,7 @@
   </div>
   <div class="marks">Marks: {{ student.marks }}</div>
   <div class="group">Group: {{ student.group | uppercase }}</div>
-  <div [hidden]="true" class="attributes-list">
+  <div [hidden]="false" class="attributes-list">
     @for (attr of student.attributes; track $index) {
     <div class="chip">
       {{ attr }}
