--- a/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
+++ b/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h3>Add New Student</h3>
-  <form>
+  <form [formGroup]="studentForm">
     <div class="main-details">
       <div class="form-group">
         <label for="name">Name</label>
@@ -9,37 +9,76 @@
           type="text"
           id="name"
           class="form-control"
+          formControlName="name"
         />
-        <!-- <small>Error message</small> -->
+
+        @if(studentForm.get('name')?.invalid && (studentForm.get('name')?.dirty
+        || studentForm.get('name')?.touched)){
+        @if(studentForm.get('name')?.errors?.['required']){
+        <small>Name is required.</small>
+        } @if(studentForm.get('name')?.errors?.['minlength']){
+        <small>Name should have atleast 3 characters.</small>
+        } }
       </div>
       <div class="form-group">
         <label>Gender</label>
         <div class="radio-group">
-          <input id="maleGender" type="radio" value="male" />
+          <input
+            id="maleGender"
+            type="radio"
+            value="male"
+            formControlName="gender"
+          />
           <label for="maleGender"> Male </label>
-          <input type="radio" id="femaleGender" value="female" />
+          <input
+            type="radio"
+            id="femaleGender"
+            value="female"
+            formControlName="gender"
+          />
           <label for="femaleGender"> Female </label>
         </div>
-        <!-- <small>Error message</small> -->
+        @if(studentForm.get('gender')?.invalid &&
+        (studentForm.get('gender')?.dirty ||
+        studentForm.get('gender')?.touched)){
+        @if(studentForm.get('gender')?.errors?.['required']){
+        <small>Gender is required.</small>
+        } }
       </div>
       <div class="form-group">
         <label for="group">Group</label>
-        <select id="group" class="form-control">
+        <select id="group" class="form-control" formControlName="group">
           <option value="" disabled>Select a group</option>
           <option value="science">Science</option>
           <option value="commerce">Commerce</option>
         </select>
-        <!-- <small>Error message</small> -->
+
+        @if(studentForm.get('group')?.invalid &&
+        (studentForm.get('group')?.dirty || studentForm.get('group')?.touched)){
+        @if(studentForm.get('group')?.errors?.['required']){
+        <small>Group is required.</small>
+        } }
       </div>
 
       <div class="form-group">
         <label for="name">Marks</label>
-        <input type="number" id="marks" class="form-control" />
-        <!-- <small>Error message</small> -->
+        <input
+          type="number"
+          id="marks"
+          class="form-control"
+          formControlName="marks"
+        />
+        @if(studentForm.get('marks')?.invalid &&
+        (studentForm.get('marks')?.dirty || studentForm.get('marks')?.touched)){
+        @if(studentForm.get('marks')?.errors?.['required']){
+        <small>Marks is required.</small>
+        } @if(studentForm.get('marks')?.errors?.['range']){
+        <small>Mark range should be 0 - 100.</small>
+        } }
       </div>
     </div>
 
-    <div [hidden]="true" class="attributes-section">
+    <div [hidden]="false" class="attributes-section">
       <div class="sub-header">
         <h4>Attributes</h4>
         <button type="button" (click)="removeThisArray.push(1)">
@@ -69,7 +108,7 @@
     </div>
 
     <div class="button-container">
-      <button type="submit" [disabled]="false">Submit</button>
+      <button type="submit" [disabled]="studentForm.invalid">Submit</button>
     </div>
   </form>
 </div>
