--- a/src/app/components/students-list/students-list.html
+++ b/src/app/components/students-list/students-list.html
@@ -28,7 +28,9 @@
         (studentDetailsSubmit)="addStudent($event)"
       ></app-student-details-capture-template> -->
 
-      <app-student-details-capture-reactive></app-student-details-capture-reactive>
+      <app-student-details-capture-reactive
+        (studentDetailsSubmit)="addStudent($event)"
+      ></app-student-details-capture-reactive>
     </div>
   </div>
   }
