--- a/src/app/components/student-tile/student-tile.scss
+++ b/src/app/components/student-tile/student-tile.scss
@@ -5,6 +5,7 @@
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   border-radius: 10px;
   padding: 20px;
+  margin-top: 20px;
   .name,
   .gender,
   .marks {
