feat: added form array for attributes.

--- a/src/app/components/students-list/students-list.html
+++ b/src/app/components/students-list/students-list.html
@@ -1,6 +1,9 @@
 <div class="wrapper">
   <div class="header">
-    <span>Class Average - {{ average }}</span>
+    <span
+      >Class Average is
+      <b>{{ average }}</b>
+    </span>
     <button (click)="showAddStudentModal = true">Add new Student</button>
   </div>
   <div class="list-container">
