--- a/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
+++ b/src/app/components/student-details-capture-reactive/student-details-capture-reactive.html
@@ -81,17 +81,16 @@
     <div [hidden]="false" class="attributes-section">
       <div class="sub-header">
         <h4>Attributes</h4>
-        <button type="button" (click)="removeThisArray.push(1)">
-          Add attribute
-        </button>
+        <button type="button" (click)="addAttribute()">Add attribute</button>
       </div>
-      <div class="attributes-list">
-        @for (item of removeThisArray; track $index) {
+      <div class="attributes-list" formArrayName="attributes">
+        @for (eachFormCtrl of getAttributeArray().controls; track $index) {
         <div class="form-group attribute-group">
           <input
             [id]="`studentAttribute${$index + 1}`"
             type="text"
             placeholder="Add an attribute"
+            [formControlName]="$index"
           />
           <img
             class="close"
@@ -99,9 +98,12 @@
             width="18"
             height="18"
             alt="delete button"
-            (click)="removeThisArray.pop()"
+            (click)="removeAttribute($index)"
           />
-          <!-- <small>Error message</small> -->
+          @if(eachFormCtrl?.invalid && (eachFormCtrl?.dirty ||
+          eachFormCtrl?.touched)){ @if(eachFormCtrl?.errors?.['required']){
+          <small>Required field.</small>
+          }}
         </div>
         }
       </div>
