feat: API calls to local json-server

--- a/src/app/components/student-tile/student-tile.html
+++ b/src/app/components/student-tile/student-tile.html
@@ -1,4 +1,12 @@
 <div class="tile">
+  <img
+    class="delete"
+    src="assets/trash.png"
+    width="18"
+    height="18"
+    alt="delete button"
+    (click)="delete(student)"
+  />
   <div class="name">
     {{ student.name }}
   </div>
